# drf-learning-api

./: Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
drf_learning_api/: asgi.py  settings.py  urls.py  wsgi.py
learning_app/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
learning_app/migrations/: 0001_initial.py
